sua backend de reaction, them post, comment cho frontend